--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
     "format": "prettier --write .",
-    "fix": "npm run lint:fix && npm run format"
+    "fix": "npm run lint:fix && npm run format",
+  "push" : "npm run fix && git push -u origin main"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
