--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "format": "prettier --write .",
     "fix": "npm run lint:fix && npm run format"
   },
+  "expo": {
+    "plugins": [
+      "expo-router"
+    ]
+  },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -24,7 +29,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.13",
+    "expo-router": "^6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -39,6 +44,7 @@
     "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-remix-icon": "^4.6.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
