feat: Update API service to use dynamic server URL and enhance chat service with new message handling features
- Refactored `api.js` to dynamically set the server URL based on the environment (development/production).
- Enhanced `chatService.js` with new methods for fetching messages, deleting messages, and managing chat states.
- Introduced socket service in `socket.js` for real-time communication with improved connection handling and event management.
- Added user profile fetching functionality in `user.service.js` and integrated push notification registration in `notificationService.js`.
- Created `ChatConversationScreen` component for handling chat UI and interactions, including message sending and typing indicators.
- Implemented `UserProfileModal` for displaying user profiles with loading states and error handling.

--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.whisp.app"
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +20,13 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.whisp.app",
+      "permissions": [
+        "android.permission.RECEIVE_BOOT_COMPLETED",
+        "android.permission.VIBRATE",
+        "com.google.android.c2dm.permission.RECEIVE"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -28,6 +35,14 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#3B82F6",
+          "sounds": ["./assets/sounds/notification.wav"]
+        }
+      ],
       [
         "expo-splash-screen",
         {
@@ -44,6 +59,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "6b7c268b-68da-43c6-ad54-89c73759072d"
+      }
+    },
+    "owner": "dev-aditya-lab"
   }
 }
