--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
     "format": "prettier --write .",
-    "fix": "npm run lint:fix && npm run format"
+    "fix": "npm run format && npm run lint:fix "
   },
   "expo": {
     "plugins": [
@@ -26,10 +26,12 @@
     "axios": "^1.12.2",
     "expo": "54.0.20",
     "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "^6.0.13",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -50,7 +52,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
