--- a/app.json
+++ b/app.json
@@ -19,6 +19,7 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
+      // Removed softwareKeyboardLayoutMode pan to allow resize behavior for keyboard handling
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.whisp.app",
