feat: Implement temporary chat session functionality
- Updated package.json to change Expo commands for Android and iOS.
- Added new state management for temporary chat sessions in ChatContext.
- Implemented functions to open and end temporary sessions, including message loading and socket handling.
- Added new API methods in chatService for creating, joining, ending, and retrieving messages from temporary sessions.

--- a/app.json
+++ b/app.json
@@ -19,7 +19,6 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
-      // Removed softwareKeyboardLayoutMode pan to allow resize behavior for keyboard handling
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.whisp.app",
@@ -55,7 +54,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true,
