--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "npm run fix && expo start -c",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
@@ -24,21 +24,24 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.12.2",
-    "expo": "54.0.20",
+    "expo": "54.0.25",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
-    "expo-linking": "~8.0.8",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "^6.0.13",
+    "expo-linking": "~8.0.9",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "~6.0.15",
     "expo-secure-store": "^15.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
@@ -47,6 +50,7 @@
     "react-native-css": "^3.0.1",
     "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-remix-icon": "^4.6.3",
     "react-native-safe-area-context": "~5.6.0",
