--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
+    "expo-document-picker": "~13.0.0",
+    "expo-file-system": "~17.0.0",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
