--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -28,6 +29,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~13.0.2",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
     "expo-document-picker": "~13.0.0",
@@ -44,6 +46,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "libsodium-wrappers": "^0.7.15",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
@@ -52,7 +55,9 @@
     "react-native-css": "^3.0.1",
     "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-libsodium": "^1.5.0",
     "react-native-qrcode-svg": "^6.3.20",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "~4.1.1",
     "react-native-remix-icon": "^4.6.3",
     "react-native-safe-area-context": "~5.6.0",
