feat: Refactor E2EE service to remove Expo Go support and enforce native build requirements
fix: Enhance media encryption with error handling and validation for file operations

feat: Improve signal protocol with session caching and identity verification

refactor: Update user service to accept new profile fields in updateProfile method

feat: Implement E2EE message queue for reliable message sending and retry logic

feat: Create key service for managing prekey bundles and key status checks

feat: Add comprehensive E2EE integration example for sending and receiving encrypted messages and files

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,4 @@
-# Environment Configuration Template
-# Copy this file to .env and fill in your values
 
-# API Configuration
-# The base URL for the API server (without /api/v1 suffix)
-EXPO_PUBLIC_API_URL=https://api-whisp.onrender.com
-
-# Socket Configuration
-# The base URL for the Socket.IO server
-EXPO_PUBLIC_SOCKET_URL=https://api-whisp.onrender.com
-
-# Development Mode
-# Set to 'true' for development, 'false' for production
-# When false, console.log statements are suppressed for performance and security
-# ⚠️ IMPORTANT: Set to 'false' before building production APK/AAB
-EXPO_PUBLIC_DEV_MODE=false
-
-# Local Development Example:
-# EXPO_PUBLIC_API_URL=http://YOUR_LOCAL_IP:8000
-# EXPO_PUBLIC_SOCKET_URL=http://YOUR_LOCAL_IP:8000
-# EXPO_PUBLIC_DEV_MODE=true
+EXPO_PUBLIC_API_URL=http://YOUR_LOCAL_IP:8000
+EXPO_PUBLIC_SOCKET_URL=http://YOUR_LOCAL_IP:8000
+EXPO_PUBLIC_DEV_MODE=true
