--- a/package.json
+++ b/package.json
@@ -12,34 +12,40 @@
     "lint:fix": "eslint . --ext .js,.jsx --fix",
     "format": "prettier --write .",
     "fix": "npm run format && npm run lint:fix ",
-    "prebuild": "npx expo prebuild --clean",
-    "build:apk": "cd android && .\\gradlew assembleRelease",
-    "build:aab": "cd android && .\\gradlew bundleRelease",
-    "build:apk:unix": "cd android && ./gradlew assembleRelease",
-    "build:aab:unix": "cd android && ./gradlew bundleRelease"
+    "prebuild": "npm run fix && npx expo prebuild --clean",
+    "build:apk": "npm run fix && cd android && .\\gradlew assembleRelease",
+    "build:aab": "npm run fix && cd android && .\\gradlew bundleRelease",
+    "build:apk:unix": "npm run fix && cd android && ./gradlew assembleRelease",
+    "build:aab:unix": "npm run fix && cd android && ./gradlew bundleRelease"
   },
   "expo": {
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-libsodium"
+        ]
+      }
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.12.2",
     "buffer": "^6.0.3",
     "expo": "54.0.25",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
-    "expo-crypto": "~13.0.2",
+    "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
-    "expo-document-picker": "~13.0.0",
-    "expo-file-system": "~17.0.0",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -63,11 +69,11 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-libsodium": "^1.5.0",
     "react-native-qrcode-svg": "^6.3.20",
-    "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "~4.1.1",
     "react-native-remix-icon": "^4.6.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1"
@@ -76,7 +82,6 @@
     "@eslint/js": "^9.38.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/react": "~19.1.10",
-    "@types/react-native": "^0.72.8",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
     "eslint-config-expo": "~10.0.0",
