--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-
-EXPO_PUBLIC_API_URL=http://YOUR_LOCAL_IP:8000
-EXPO_PUBLIC_SOCKET_URL=http://YOUR_LOCAL_IP:8000
-EXPO_PUBLIC_DEV_MODE=true
+EXPO_PUBLIC_API_URL=https://api-whisp.onrender.com
+EXPO_PUBLIC_SOCKET_URL=https://api-whisp.onrender.com
+EXPO_PUBLIC_DEV_MODE=false
